tests/ui/enum.rs
#[readonly::make]
enum E {
    V(u8),
}

fn main() {}
